# menu_generator

./: .gitignore  CMakeLists.txt
src/box/: box.cpp  box.h  box_box.cpp  box_box.h  box_box_height.cpp  box_box_height.h  box_box_width.cpp  box_box_width.h  box_data.cpp  box_data.h  box_edge.cpp  box_edge.h  box_fd.h  box_point.cpp  box_point.h  box_types.h
src/main/: main.cpp
src/pre/: box.h  glob_1.h
src/std/: std_struct.h
